style.css
body {
  background: linear-gradient(#6cdac4, #99a1f5);
  margin: 3.1em;
}

/* WATER WASTE - The title of the page will always be the title of the app */
h1 {
  position: relative;
  margin-left: auto;
  margin-right: auto;
  top: 27.22%;
  bottom: 48.43%;

  font-family: Monomaniac One;
  font-style: normal;
  font-weight: normal;
  font-size: 100px;
  line-height: 145px;
  /* identical to box height */
  display: flex;
  align-items: center;
  text-align: center;

  color: #000000;
}

h3 {
  position: relative;
  left: 22.42%;
  right: 23.74%;
  top: 27.22%;
  bottom: 48.43%;

  font-family: Monomaniac One;
  font-style: normal;
  font-weight: normal;
  font-size: 36px;
  line-height: 52px;
  display: flex;
  align-items: center;
  text-align: center;

  color: #000000;
}

.CalibrateNewDevice {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 18px 29px;
  margin: 2em;
  position: relative;
  left: 42.42%;
  right: 23.74%;
  top: 27.22%;
  bottom: 48.43%;

  /* Blue 3 */

  background: #b4dcff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.AddTime {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 18px 78px;
  margin: 2em;
  position: relative;
  left: 42.42%;
  right: 23.74%;
  top: 27.22%;
  bottom: 48.43%;

  /* Blue 3 */

  background: #b4dcff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

body {
  font-family: Monomaniac One;
  font-style: normal;
  font-weight: normal;
  font-size: 36px;
  line-height: 52px;
  display: flex;
  align-items: center;
  text-align: center;

  color: #000000;
}

#calibrate {
  position: absolute;
  left: 40.89%;
  right: 40.89%;
  top: 27.22%;
  bottom: 68.43%;
}

#start {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 18px 29px;
  margin: 2em;
  position: relative;
  left: 20.5%;
  right: 61.15%;
  top: 38.02%;
  bottom: 54.61%;

  /* Blue 3 */
  background: #b4dcff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#confirm {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 18px 21px;
  margin: 2em;
  position: relative;
  left: 20.5%;
  right: 61.15%;
  top: 38.02%;
  bottom: 54.61%;

  /* Blue 3 */

  background: #b4dcff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}
#stop {
  /* Frame 2 */

  /* Auto layout */
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 18px 34px;
  margin: 2em;
  position: relative;
  left: 20.5%;
  right: 61.15%;
  top: 38.02%;
  bottom: 54.61%;

  /* Blue 3 */
  background: #b4dcff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#go {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 18px 35px;
  margin: 2.5em;
  position: relative;
  left: 20.5%;
  right: 61.15%;
  top: 38.02%;
  bottom: 54.61%;

  /* Blue 3 */

  background: #b4dcff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

